# handwriting

./: .prettierrc.json  commitlint.config.ts  package-lock.json  package.json  vite.config.ts
assets/: x.json
backend/: .gitignore  dev.Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/api/: __init__.py  dependencies.py  settings.py  utils.py
backend/api/database/: connection.py
backend/api/factories/: __init__.py
backend/api/models/: handwriting.py
backend/api/router/: __init__.py
backend/api/schemas/: __init__.py  status.py
backend/api/services/: mathpix.py
backend/migrations/: env.py
backend/migrations/versions/: 47d60ec645fb_add_jsonb_handwriting.py  5481e37637f5_add_latex_text.py  59b3a06e588f_add_jsonb_handwriting_real.py
scripts/: convertStrokes.py  mathpix.py
src/: App.css  App.tsx  UserSelector.tsx  axios.ts  excalidraw.overrides.scss  live-updates.hook.ts  main.tsx
