[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-factoryboy = "^2.7.0"
mypy = "^1.10.0"
black = "^24.4.2"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "venv"
disable_error_code = "var-annotated"
ignore_missing_imports = true
